--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>Activity 1:HTML</title>
 </head>
 <body>
-    <h>Vijitha</h>
-    <img src="", alt="Image not available!">
+    <h>Vijitha Samarasinghe</h>
+    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQErtTarkO9PMg/profile-displayphoto-shrink_800_800/0/1609635279849?e=1622678400&v=beta&t=NMa2D9SZD9EE0juUIQSPbCflfxxNwOfgAR12WodSp1Q", alt="Vijitha">
 
-    <p> first pargraph</p>
+    <p> Hello, I am Research Coodinator, Surveillance Data Analyst</p>
 </body>
 <ul>
-    <li><a href="http://html5doctor.com/" target="_blank">HTML5 Doctor</a></li>
+    <li><a href="https://www.linkedin.com/in/vijitha-samarasinghe-lahanda-wadu-44b53816b/" target="_blank">Research Coordinator</a></li>
 
     </ul>
     </html>
